--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,9 @@
 @import './base/settings';
 @import './base/base';
+@import './components/addOption';
 @import './components/_button';
 @import './components/container';
 @import './components/header';
+@import './components/modal';
+@import './components/widget';
+@import './components/option';
