Add some properties to the style and add favicon

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
     background: $off-black;
     color:white;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding:$m-size 0;
 }
 
@@ -15,5 +15,12 @@
     color: $off-white;
     margin: 0;
     font-weight: 500;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .header {
+        margin-bottom: $xl-size;
+        padding: $s-size 0;
+    }
 }
 
