--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -11,3 +11,6 @@ $m-size:  1.6rem; // medium font-size
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $s-size: 1.2rem;
+
+// screen adapt
+$desktop-breakpoint: 45em;
