--- a/src/styles/components/_addOption.scss
+++ b/src/styles/components/_addOption.scss
@@ -8,6 +8,7 @@
 .add-option {
     display: flex; // to allow using the flex-grow in its child content
     padding: $m-size;
+    flex-direction: column; // stack thing vertically, by default row
 }
 
 .add-option__input {
@@ -16,6 +17,21 @@
     border-bottom: .3rem solid darken($dark-blue, 10%);
     border: none;
     flex-grow: 1; // because we define the add-option to flex, we can style this element that are part of add-option to flex-grow to 1
-    margin-right: $s-size;
+   // margin-right: $s-size;
     padding: $s-size;
+    margin: 0 0 $s-size 0;
+}
+
+// the condition is in the parenthesis, if the max screen width is <= 45em, we apply the following
+@media (min-width: $desktop-breakpoint) {
+   * {
+        color: red;
+   }
+
+   .add-option {
+       flex-direction: row;
+   }
+   .add-option__input {
+    margin: 0 $s-size 0 0;
+   }
 }
